package com.directi.training.isp.exercice_refactored;

public interface Door
{
    void lock();

    void unlock();

    void open();

    void close();

}
