package com.directi.training.isp.exercice_refactored;

public interface ISensingDoor {
    void proximityCallback();
}
